# DOOM-Casio-Graph

./: .gitignore  35+e.ld  AddinInfo.txt  CMakeLists.txt  MyAddin.dlw  MyAddin.g1a  MyAddin.g1w  README.md  memory_shenanigans.txt
GbaWadUtil/: DOOM_LEVEL_1.wad  build-gbadoom.bat  build-miniwad.bat  build-squashed_doom1.bat
include/: config.h  doomdef.h  gba_functions.h  hu_lib.h  i_system_e32.h  i_system_fx.h  i_system_win.h  m_fixed.h  mylib.h  r_draw.h  r_main.h  r_things.h  st_lib.h  st_stuff.h  tables.h  v_video.h
include/dbg/: casio_debug.h
source/: am_map.c  d_main.c  doom_iwad.c  f_finale.c  f_wipe.c  hu_lib.c  hu_stuff.c  i_main.c  i_system_e32.c  i_system_e32.cpp  i_system_fx.c  i_video.c  lprintf.c  m_menu.c  m_recip.c  p_ceilng.c  p_map.c  p_plats.c  r_data.c  r_draw.c  r_hotpath.iwram.c  r_plane.c  s_sound.c  st_lib.c  tables.c  v_video.c  wi_stuff.c
source/dbg/: casio_debug.c
std/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
std/include/: mylib.h
std/src/: mylib.c
